# focus-guard

./: .env.example  .gitignore  README.md  pyproject.toml
src/focus_guard/: __init__.py  config.py  main.py  models.py  storage.py
src/focus_guard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/focus_guard/services/: __init__.py  detector.py  llm.py  ocr.py  rules.py  screenshot.py  window.py
src/focus_guard/ui/: analysis_dialog.py  main_window.py  reminder_dialog.py  settings_dialog.py  theme.py
