[project]
name = "focus-guard"
version = "0.1.0"
description = "A Windows desktop focus monitor using local OCR and LLM-based judgment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6-Essentials>=6.7",
    "mss>=9.0",
    "Pillow>=10.0",
    "psutil>=5.9",
    "pywin32>=306; platform_system == 'Windows'",
    "python-dotenv>=1.0",
    "rapidocr-onnxruntime>=1.3",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
]

[project.scripts]
focus-guard = "focus_guard.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
